minor fixes: readmore, font-weight, margin, gaps

--- a/dev/scss/layout/_blog.scss
+++ b/dev/scss/layout/_blog.scss
@@ -7,23 +7,25 @@
     position: relative;
     overflow: auto;
     margin: 0 .5rem;
+    gap: .5rem;
     & div {
-        // margin-left: .5rem;
-        // margin-right: .5rem;
         display: flex;
         flex-direction: column;
         justify-content: start;
         position: relative;
         max-height: 240px;
-        overflow: auto;
+        overflow: hidden;
     }
     & div img {
         width: 100%;
         height: 100%;
         z-index: 1;
+
         
     }
     & div h1 {
+        font-weight: 400;
+        font-size: 2rem;
         color: $white;
         position: absolute;
         bottom: 0;
@@ -32,7 +34,7 @@
         z-index: 2;
         background: rgba(0, 0, 0, 0.7);
         margin: 0;
-        padding: .5rem;
+        padding: 1rem;
     }
 }
 
@@ -41,7 +43,6 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
-        gap: .5rem;
         }
         
         .gallery-1 { 
@@ -54,6 +55,10 @@
         .gallery-3 { 
             grid-area: 2 / 2 / 3 / 3; 
         }
+}
+
+.gallery-1 {
+    margin-top: .5rem;
 }
 
 .recipes {
@@ -120,12 +125,13 @@
 }
 
 .read-more {
+    font-family: $heading-nav-font;
     display: flex;
     flex-direction: row;
-    font-weight: 900;
+    font-weight: 700;
+    font-size: 1.25rem;
     background-color: $light-blue;
     color: $almost-white;
-    width: 7rem;
     height: 3rem;
     padding: 0 .5rem;
     text-align: center;
@@ -133,8 +139,6 @@
 }
 
 // older posts
-
-
 .older-posts-div {
     align-items: center;
     display: flex;
@@ -143,7 +147,6 @@
     
    
 }
-
 .older-posts {
     padding: 3rem;
     width: 15rem;
